k8s/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: microservice-app
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
