k8s/base/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservice-app
spec:
  selector:
    app: order-service
  ports:
    - port: 5002
      targetPort: 5002
