k8s/base/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels: { app: order-service }
  template:
    metadata:
      labels: { app: order-service }
    spec:
      containers:
        - name: order-service
          image: anusree15/order-service:latest
          ports: [{ containerPort: 5002 }]

          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"

          readinessProbe:
            httpGet: { path: /health, port: 5002 }
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector: { app: order-service }
  ports: [{ port: 5002, targetPort: 5002 }]
